added instructions to each page

--- a/game_pages/template/game_template.html
+++ b/game_pages/template/game_template.html
@@ -39,6 +39,11 @@
                 text-align:center;
                 font-weight:bold;
             }
+            #game-instructions{
+                margin-top:10px;
+                font-size:18px;
+                line-height: 20px;;
+            }
             .select-items{
                 margin:auto;
                 width:50px;
@@ -67,6 +72,9 @@
             </div>
             <div id="game-container">
                 <canvas id="unity-canvas" width=576 height=480 style="width: 576px; height: 480px; background: #231F20"></canvas>
+            </div>
+            <div id="game-instructions">
+                [WASD] - Move | [SPACE] - Shoot
             </div>
 
             <div id="footer">
