--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,11 @@ a{
     width:720px;
     display:flex;
 }
+#game-instructions{
+    margin-top:10px;
+    font-size:18px;
+    line-height: 20px;;
+}
 .game-pick{
     border:5px solid #00000000;
     padding:20px;
